--- a/SM.BL/SM.BL.cs.csproj
+++ b/SM.BL/SM.BL.cs.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <AssemblyName>SM.BL</AssemblyName>
   </PropertyGroup>
 
 </Project>
